[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing"


[dependency-groups]
dev = [
    "basedpyright>=1.31.2",
    "pytest>=8.4.1",
 "pytest-cov>=6.2.1",
 "ruff>=0.12.9",
]
